Fix favicon: use AfiliaApp logo

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <!-- Favicon -->
   <link rel="icon" href="images/favicon.png" type="image/png">
-  <link rel="apple-touch-icon" href="images/logo64.webp">
+  <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
 
   <!-- Icons (versioned) -->
   <script src="https://unpkg.com/@phosphor-icons/web@2.1.1"></script>
