WhatsApp icon: outline style, orange color, 2rem size

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
       <div class="navbar__cta">
         <a href="https://wa.me/34634427730?text=Hola%20soy%20[Nombre]%20del%20sindicato%20[XXX].%20Quiero%20info."
           target="_blank" rel="noopener"
-          style="color: #25D366; font-size: 1.8rem; display: flex; align-items: center; margin-right: 12px;"
+          style="color: var(--orange); font-size: 2rem; display: flex; align-items: center; margin-right: 12px;"
           title="WhatsApp">
-          <i class="ph-fill ph-whatsapp-logo"></i>
+          <i class="ph ph-whatsapp-logo"></i>
         </a>
         <a href="#" onclick="openDemoModal(event)" class="btn btn--primary btn--small">Solicitar demo</a>
       </div>
