Referral program: percentage-based (5%/3mo, unlimited, max 15%)

--- a/planes.html
+++ b/planes.html
@@ -873,34 +873,25 @@
                 <h3 class="headline headline--md" style="text-align:center;">Programa de <span
                         class="text-orange">referidos</span></h3>
                 <p class="subtitle" style="text-align: center; margin-bottom: 24px;">Recomienda AfiliaApp a otro
-                    sindicato y recibe una recompensa según tu plan.</p>
+                    sindicato y ahorra en tu factura. Sin límite de recomendaciones.</p>
 
                 <div class="pricing-calculator" style="margin-bottom: 20px;">
-                    <div class="calc-row calc-header" style="grid-template-columns: 1.5fr 1fr 1fr 1fr;">
-                        <span class="calc-cell calc-cell--label">Beneficio</span>
-                        <span class="calc-cell" style="color:var(--text-secondary);text-align:center;">Básico</span>
-                        <span class="calc-cell calc-cell--est">Estándar</span>
-                        <span class="calc-cell calc-cell--prem">Premium</span>
+                    <div class="calc-row calc-header" style="grid-template-columns: 1.5fr 1fr;">
+                        <span class="calc-cell calc-cell--label">Concepto</span>
+                        <span class="calc-cell calc-cell--est">Todos los planes</span>
                     </div>
-                    <div class="calc-row" style="grid-template-columns: 1.5fr 1fr 1fr 1fr;">
+                    <div class="calc-row" style="grid-template-columns: 1.5fr 1fr;">
                         <span class="calc-cell calc-cell--label">Descuento por referido</span>
-                        <span class="calc-cell" style="color:var(--text-secondary);text-align:center;">1 mes
-                            gratis</span>
-                        <span class="calc-cell calc-cell--est"><strong>50€</strong>/año</span>
-                        <span class="calc-cell calc-cell--prem"><strong>100€</strong>/año</span>
+                        <span class="calc-cell calc-cell--est"><strong>5%</strong> de tu factura durante <strong>3
+                                meses</strong></span>
                     </div>
-                    <div class="calc-row" style="grid-template-columns: 1.5fr 1fr 1fr 1fr;">
-                        <span class="calc-cell calc-cell--label">Máx. referidos/año</span>
-                        <span class="calc-cell" style="color:var(--text-secondary);text-align:center;">1</span>
-                        <span class="calc-cell calc-cell--est">3</span>
-                        <span class="calc-cell calc-cell--prem">3</span>
+                    <div class="calc-row" style="grid-template-columns: 1.5fr 1fr;">
+                        <span class="calc-cell calc-cell--label">Referidos al año</span>
+                        <span class="calc-cell calc-cell--est"><strong>Ilimitados</strong></span>
                     </div>
-                    <div class="calc-row" style="grid-template-columns: 1.5fr 1fr 1fr 1fr;">
-                        <span class="calc-cell calc-cell--label">Ahorro máximo</span>
-                        <span class="calc-cell" style="color:var(--text-secondary);text-align:center;">1 mes
-                            gratis</span>
-                        <span class="calc-cell calc-cell--est"><strong>150€</strong>/año</span>
-                        <span class="calc-cell calc-cell--prem"><strong>300€</strong>/año</span>
+                    <div class="calc-row" style="grid-template-columns: 1.5fr 1fr;">
+                        <span class="calc-cell calc-cell--label">Máx. activos a la vez</span>
+                        <span class="calc-cell calc-cell--est"><strong>3</strong> (hasta 15% de descuento)</span>
                     </div>
                 </div>
 
@@ -909,6 +900,11 @@
                         <i class="ph ph-handshake" style="color: var(--orange); font-size: 1.4rem; flex-shrink: 0;"></i>
                         <span>El sindicato referido siempre obtiene su <strong>primer mes gratis</strong>,
                             independientemente del plan que contrate.</span>
+                    </div>
+                    <div class="referidos__item">
+                        <i class="ph ph-percent" style="color: var(--orange); font-size: 1.4rem; flex-shrink: 0;"></i>
+                        <span>Al expirar un referido (3 meses), puedes <strong>recomendar otro</strong> y recuperar ese
+                            5%.</span>
                     </div>
                     <div class="referidos__item">
                         <i class="ph ph-info" style="color: var(--orange); font-size: 1.4rem; flex-shrink: 0;"></i>
